@@ -1,7 +1,6 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package ai.vespa.metricsproxy.service;
 
-import com.google.common.collect.ImmutableList;
 import org.junit.Test;
 
 import java.util.List;
@@ -18,7 +17,7 @@ public class VespaServicesTest {
 
     @Test
     public void services_can_be_retrieved_from_monitoring_name() {
-        List<VespaService> dummyServices = ImmutableList.of(
+        List<VespaService> dummyServices = List.of(
                 new DummyService(0, "dummy/id/0"),
                 new DummyService(1, "dummy/id/1"));
         VespaServices services = new VespaServices(dummyServices);
@@ -28,7 +27,7 @@ public class VespaServicesTest {
 
     @Test
     public void all_services_can_be_retrieved_by_using_special_name() {
-        List<VespaService> dummyServices = ImmutableList.of(
+        List<VespaService> dummyServices = List.of(
                 new DummyService(0, "dummy/id/0"));
         VespaServices services = new VespaServices(dummyServices);
 
