@@ -1,11 +1,9 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.text;
 
-import com.google.common.collect.ImmutableSet;
-
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.io.ByteArrayOutputStream;
 import java.util.Set;
@@ -212,12 +210,12 @@ public class StringUtilities {
 
     /** Splits a string on both space and comma */
     public static Set<String> split(String s) {
-        if (s == null || s.isEmpty()) return Collections.emptySet();
-        ImmutableSet.Builder<String> b = new ImmutableSet.Builder<>();
+        if (s == null || s.isEmpty()) return Set.of();
+        Set<String> b = new HashSet<>();
         for (String item : s.split("[\\s,]"))
             if ( ! item.isEmpty())
                 b.add(item);
-        return b.build();
+        return Set.copyOf(b);
     }
 
 }
